--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div id="image">
     <div id="image-text"><div id="kekulé-qoute"><q>Let us learn to dream, gentlemen, and then perhaps we shall learn the truth.</q></div></div>
-    <div id="the-image"><img id="kekulé-image" src="frkekulé.jpg"></div>
+    <div id="the-image"><img id="kekulé-image" src="Frkekulé.jpg"></div>
   </div>
 
   <div id="third-div">
